// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggle the disabled prop by change prop 1`] = `
<label
  aria-disabled="false"
  class="seu-checkbox-button"
  role="checkbox"
>
  <input
    class="seu-checkbox-button__original"
    type="checkbox"
  />
   
  <span
    class="seu-checkbox-button__inner"
  >
    label3
  </span>
</label>
`;

exports[`toggle the disabled prop by change prop 2`] = `
<label
  aria-disabled="true"
  class="seu-checkbox-button is-disabled"
  role="checkbox"
>
  <input
    class="seu-checkbox-button__original"
    disabled=""
    type="checkbox"
  />
   
  <span
    class="seu-checkbox-button__inner"
  >
    label3
  </span>
</label>
`;

exports[`toggle the disabled prop by change prop 3`] = `
<label
  aria-disabled="false"
  class="seu-checkbox-button"
  role="checkbox"
>
  <input
    class="seu-checkbox-button__original"
    type="checkbox"
  />
   
  <span
    class="seu-checkbox-button__inner"
  >
    label3
  </span>
</label>
`;
